# opentimelineio-bind

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  build.rs  generatebindings.py  wrapper.h
.devcontainer/: devcontainer.json
opentimelineio/: Cargo.toml
opentimelineio-sys/: Cargo.toml  bindgen.py  build.rs
opentimelineio-sys/src/: lib.h  lib.rs
opentimelineio/src/: lib.rs
opentimelineio/src/opentime/: error_status.rs  mod.rs  optional_open_time.rs  rational_time.rs  time_range.rs  time_transform.rs
src/: lib.h  lib.rs
src/opentime/: version.hpp
